--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,12 +1,12 @@
-#??
+#Google
 spring.security.oauth2.client.registration.google.client-id=806447002818-6rv4ajep9b7ejs87iu3pnag7rb3e324h.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 
 
-#???
-spring.security.oauth2.client.registration.naver.client-id=IBSKCiPM06xlgPx3S6xS
-spring.security.oauth2.client.registration.naver.client-secret=S3ZTBCFhMP
+#Naver
+spring.security.oauth2.client.registration.naver.client-id=N_jReX7EzmJy0vK8hFAS
+spring.security.oauth2.client.registration.naver.client-secret=RPuvfjH8bz
 spring.security.oauth2.client.registration.naver.scope=name,email
 spring.security.oauth2.client.registration.naver.client-name=naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
@@ -17,7 +17,7 @@ spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
 
-#???
+#Kakao
 spring.security.oauth2.client.registration.kakao.client-id=2ee492fa43903c5331f09cac64a75f02
 spring.security.oauth2.client.registration.kakao.client-secret=JcMKLWaX1eDPsqLlwpNNvJNFFrLAArtQ
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname, account_email
